# pudmed_pdf_scraper

./: .gitignore  README.md  package-lock.json  package.json
.Docs/: .PRD_initial.md  .Start.md  prd_description.md  todo.md
.Docs/implementation/: 1.roadmap.md  2fast-api-implementation.md
backend/: Makefile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: jobs.py
backend/app/api/schemas/: jobs.py
backend/app/core/: config.py
backend/app/models/: models.py
backend/app/repositories/: jobs_repo.py
backend/app/services/: resolver.py
backend/app/services/resolver/: README.md  __init__.py  exceptions.py  external.py  fetcher.py  html_parser.py  manager.py  pmc.py  prebaked_responses.py  results.py  url_utils.py
backend/tests/: conftest.py  test_resolver.py
backend/tests/fixtures/: external_pdf_article.html  pmc_pdf_article.html  pubmed_external_article.html  pubmed_pmc_article.html
frontend/: package.json  tailwind.config.ts
frontend/src/: constants.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/: articlesApi.ts  baseApiService.ts  index.ts  jobsApi.ts  mockApiService.ts  mockData.ts
frontend/src/app/dashboard/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/app/jobs/: page.tsx
frontend/src/components/job/: JobForm.tsx  JobProgress.tsx  ResultsTable.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx  MainLayout.tsx  (+1 more)
frontend/src/types/: api.types.ts  article.types.ts  index.ts  job.types.ts
frontend/src/utils/: formatting.ts  validation.ts
(+8 files in other folders)
